--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(Eadj_matrix)
 export(Edistance_matrix)
 export(Laplacian_Edistance)
 export(Laplacian_Vdistance)
+export(Moleculors_GUI)
 export(Moleculors_init)
 export(N_atoms)
 export(Platt_number_calc)
@@ -30,3 +31,5 @@ export(descriptor_launcher)
 export(graphical_matrix)
 export(molecular_input)
 export(molecular_weight)
+import(gWidgets2)
+import(gWidgets2RGtk2)
