--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(Moleculors_GUI)
 export(Moleculors_init)
 export(N_atoms)
 export(Platt_number_calc)
+export(Randic_index_calc)
+export(Randic_valence_index_calc)
 export(Rec_Complementary_Edistance)
 export(Rec_Complementary_Vdistance)
 export(Rec_ECdistance)
@@ -24,6 +26,7 @@ export(V_Harary_matrix)
 export(Vadj_highpower_matrix)
 export(Vadj_kneigh_matrix)
 export(Vadj_matrix)
+export(Vadj_matrix_full)
 export(Vdistance_matrix)
 export(Wiener_index_calc)
 export(Zagreb_index_calc)
