Kappa shape and E-state

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,10 @@ export(Distance_path_Edistance)
 export(Distance_path_Vdistance)
 export(ECdistance_matrix)
 export(E_Harary_matrix)
+export(E_state)
 export(Eadj_matrix)
 export(Edistance_matrix)
+export(First_order_kappa_calc)
 export(Laplacian_Edistance)
 export(Laplacian_Vdistance)
 export(Moleculors_GUI)
