--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(First_order_kappa_calc)
 export(Hydro_factor_calc)
 export(Laplacian_Edistance)
 export(Laplacian_Vdistance)
+export(Laplacian_Vdistance_full)
+export(MED_index_calc)
 export(Moleculors_GUI)
 export(Moleculors_init)
 export(N_atoms)
@@ -27,7 +29,6 @@ export(Rec_Complementary_Edistance)
 export(Rec_Complementary_Vdistance)
 export(Rec_ECdistance)
 export(Rec_VCdistance)
-export(Unsaturation_index_calc)
 export(VCdistance_matrix)
 export(V_Harary_matrix)
 export(Vadj_highpower_matrix)
