--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(Balaban_index_calc)
 export(Bulk_Electronegativity_indexes_calc)
 export(Complementary_Edistance)
 export(Complementary_Vdistance)
+export(Csi_V_matrix)
 export(Distance_path_Edistance)
 export(Distance_path_Vdistance)
 export(ECdistance_matrix)
@@ -11,7 +12,10 @@ export(E_Harary_matrix)
 export(E_state)
 export(Eadj_matrix)
 export(Eadj_matrix_full)
+export(Ec_index_calc)
 export(Edistance_matrix)
+export(Extended_Vadj_matrix_Vdegrees)
+export(Extended_Vadj_matrix_Veln)
 export(First_order_kappa_calc)
 export(Hydro_factor_calc)
 export(Laplacian_Edistance)
@@ -22,22 +26,26 @@ export(Moleculors_init)
 export(N_atoms)
 export(Platt_number_calc)
 export(QSAR_NN_model)
+export(Q_polarity_calc)
 export(Randic_index_calc)
 export(Randic_valence_index_calc)
 export(Rec_Complementary_Edistance)
 export(Rec_Complementary_Vdistance)
 export(Rec_ECdistance)
 export(Rec_VCdistance)
+export(Sparse_csi_V_matrix)
 export(VCdistance_matrix)
 export(V_Harary_matrix)
 export(Vadj_highpower_matrix)
 export(Vadj_kneigh_matrix)
 export(Vadj_matrix)
 export(Vadj_matrix_full)
+export(Vdistance_distance_matrix)
 export(Vdistance_matrix)
 export(Wiener_index_calc)
 export(Zagreb_index_calc)
 export(descriptor_launcher)
+export(eigenvalues_descp_cacl)
 export(graphical_matrix)
 export(molecular_input)
 export(molecular_input_multiple)
