--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,9 @@ export(Laplacian_Vdistance)
 export(Laplacian_Vdistance_full)
 export(Moleculors_GUI)
 export(Moleculors_init)
+export(Moleculors_lin_reg)
 export(N_atoms)
+export(OneMat)
 export(Platt_number_calc)
 export(QSAR_NN_model)
 export(Q_polarity_calc)
@@ -44,9 +46,12 @@ export(Vdistance_distance_matrix)
 export(Vdistance_matrix)
 export(Wiener_index_calc)
 export(Zagreb_index_calc)
+export(ZeroMat)
 export(descriptor_launcher)
 export(eigenvalues_descp_cacl)
+export(gauss_jordan_inverse)
 export(graphical_matrix)
+export(invMat)
 export(molecular_input)
 export(molecular_input_multiple)
 export(molecular_weight)
