old_invMat not supported anymore

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,9 +49,9 @@ export(Zagreb_index_calc)
 export(ZeroMat)
 export(descriptor_launcher)
 export(eigenvalues_descp_cacl)
-export(gauss_jordan_inverse)
 export(graphical_matrix)
 export(invMat)
+export(invMat_old_not_supported)
 export(molecular_input)
 export(molecular_input_multiple)
 export(molecular_weight)
